styles/general-styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
@keyframes animate-platform {
    0% {
        filter: opacity(1);
    }
    100% {
        filter: opacity(0.5);
    }
}
@keyframes animate-loader {
    0% {
        transform: rotate(0deg);
        filter: hue-rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
        filter: hue-rotate(360deg);
    }
}
@keyframes animate-logo {
    0% {
        filter: hue-rotate(0deg);
    }
    100% {
        filter: hue-rotate(360deg);
    }
}

:root {
    --white: white;
    --black: black;
    --dark-grey: rgb(20, 20, 20);
    --darker-grey: rgb(40, 40, 40);
    --medium-grey: rgb(60, 60, 60);
    --lighter-grey: rgb(80, 80, 80);
    --light-grey: rgb(100, 100, 100);
}

::selection {
    background-color: rgb(150, 150, 150);
    color: rgb(255, 255, 255);
}
::-webkit-scrollbar {
    background-color: var(--dark-grey);
    width: 0.5vw;
}
::-webkit-scrollbar-thumb {
    background-color: var(--lighter-grey);
}
*,
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Roboto, Arial, Helvetica, sans-serif;
    font-size: inherit;
    line-height: inherit;
    color: inherit;
    color: var(--white);
}
body {
    background-color: var(--black);
}
html {
    scroll-behavior: smooth;
    font-size: 16px;
    line-height: 1.5;
    overflow: hidden;
}

body {
    height: 100%;
    width: 100%;
    position: fixed;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
}
a {
    text-decoration: none;
}
li {
    list-style: none;
}
button {
    outline: none;
    border: none;
    cursor: pointer;
}
img,
svg {
    fill: var(--white);
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}
select {
    border: none;
    outline: none;
}
input,
select:focus {
    line-height: 1;
    border: none;
    outline: none;
}
input::placeholder {
    font-size: inherit;
}
.navigation {
    padding: 0.5rem;
    height: 70px;
    z-index: 2;
    font-size: 1.5rem;
    width: 100%;
    position: fixed;
    top: 0;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    background-color: var(--dark-grey);
    color: var(--white);
}
.navigation > a {
    padding: 0 0.5em;
    transition: 150ms ease filter;
}
.navigation > a:hover {
    filter: drop-shadow(0 0 0.5em var(--white));
}

.navigation .logo {
    padding: 0;
    font-weight: 900;
    display: block;
    margin-right: auto;
    font-size: 2rem;
    margin-left: 1em;
    text-shadow: 0 0 0.5em greenyellow;
    animation: animate-logo 2s linear infinite;
}

.container {
    padding: 0 20px;
    margin: 0 auto;
    max-width: 1300px;
}
.loading {
    display: block;
    position: absolute;
    background-color: var(--black);
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.loader {
    width: 100px;
    height: 100px;
    border-radius: 100%;
    background: linear-gradient(45deg, transparent, transparent 30%, orange);
    animation: animate-loader 250ms linear infinite;
}
.loader::after {
    content: "";
    position: absolute;
    inset: 15px;
    background: var(--black);
    border-radius: 100%;
}
.loader::before {
    content: "";
    position: absolute;
    inset: 0;
    background: linear-gradient(45deg, transparent, transparent 30%, orange);
    border-radius: 100%;
    filter: blur(15px);
}

@media (max-width: 800px) {
    html {
        font-size: 14px;
    }
}
@media (max-width: 600px) {
    html {
        font-size: 12px;
    }
}
@media (max-width: 400px) {
    html {
        font-size: 10px;
    }
}

